--- a/styles/rwd-layout.css
+++ b/styles/rwd-layout.css
@@ -5,41 +5,76 @@ body {
 .container {
   background: silver;
   border: 1px solid red;
+  display: flex;
+  flex-flow: row wrap;
 }
 
 .group1 {
   background: gold;
 }
+
 .group2 {
   background: pink;
 }
+
 .group3 {
   background: lightgreen;
 }
+
 .group4 {
   background: skyblue;
 }
+
 .group5 {
   background: salmon;
 }
+
 .group6 {
   background: violet;
 }
+
 .group7 {
   background: aquamarine;
 }
+
 .group8 {
   background: lightseagreen;
 }
+
 .group9 {
   background: MediumPurple;
 }
+
 .group10 {
   background: MidnightBlue;
 }
+
 .group11 {
   background: Olive;
 }
+
 .group12 {
   background: SandyBrown;
+}
+
+/* 모든 디바이스 */
+div[class*="group"] {
+  width: 100%;
+  height: 50px;
+}
+
+/* 768px 이상일 떄 */
+@media (min-width: 768px) {
+  div[class*="group"] {
+    width: 50%;
+    height: 100px;
+  }
+}
+
+/* 1280px 이상일 때 */
+@media (min-width: 1280px) {
+  div[class*="group"] {
+    width: 25%;
+    height: 200px;
+  }
 }
