--- a/styles/rwd-layout.css
+++ b/styles/rwd-layout.css
@@ -1,12 +1,9 @@
-body {
-  margin: 0;
+* {
+  box-sizing: border-box;
 }
 
-.container {
-  background: silver;
-  border: 1px solid red;
-  display: flex;
-  flex-flow: row wrap;
+body {
+  margin: 0;
 }
 
 .group1 {
@@ -58,9 +55,19 @@ body {
 }
 
 /* 모든 디바이스 */
+.container {
+  background: silver;
+  border: 1px solid red;
+  display: flex;
+  flex-flow: row wrap;
+  padding: 12px 12px;
+}
+
 div[class*="group"] {
   width: 100%;
   height: 50px;
+  margin: 12px 0;
+  padding: 0 12px;
 }
 
 /* 768px 이상일 떄 */
