--- a/styles/rwd-layout.css
+++ b/styles/rwd-layout.css
@@ -6,51 +6,51 @@ body {
   margin: 0;
 }
 
-.group1 {
+.group1 .box{
   background: gold;
 }
 
-.group2 {
+.group2 .box{
   background: pink;
 }
 
-.group3 {
+.group3 .box{
   background: lightgreen;
 }
 
-.group4 {
+.group4 .box{
   background: skyblue;
 }
 
-.group5 {
+.group5 .box{
   background: salmon;
 }
 
-.group6 {
+.group6 .box{
   background: violet;
 }
 
-.group7 {
+.group7 .box{
   background: aquamarine;
 }
 
-.group8 {
+.group8 .box{
   background: lightseagreen;
 }
 
-.group9 {
+.group9 .box{
   background: MediumPurple;
 }
 
-.group10 {
+.group10 .box {
   background: MidnightBlue;
 }
 
-.group11 {
+.group11 .box {
   background: Olive;
 }
 
-.group12 {
+.group12 .box {
   background: SandyBrown;
 }
 
@@ -60,21 +60,27 @@ body {
   border: 1px solid red;
   display: flex;
   flex-flow: row wrap;
-  padding: 12px 12px;
+  padding: 12px;
 }
 
 div[class*="group"] {
   width: 100%;
-  height: 50px;
-  margin: 12px 0;
-  padding: 0 12px;
+  margin: 0;
+}
+
+.box {
+  margin: 12px;
+  height: 150px;
 }
 
 /* 768px 이상일 떄 */
 @media (min-width: 768px) {
   div[class*="group"] {
     width: 50%;
-    height: 100px;
+  }
+
+  div.group1, div.group4 {
+    width: 100%;
   }
 }
 
@@ -82,6 +88,13 @@ div[class*="group"] {
 @media (min-width: 1280px) {
   div[class*="group"] {
     width: 25%;
-    height: 200px;
+  }
+
+  div.group2 {
+    order: 1;
+  }
+
+  div.group1, div.group12{
+    width: 75%;
   }
 }
