--- a/styles/grid-layout.css
+++ b/styles/grid-layout.css
@@ -86,4 +86,10 @@ body {
   .container {
     grid-template-columns: repeat(4, 1fr);
   }
+
+  .group1 {
+    grid-column-start: 2;
+    grid-row-start: 3;
+    grid-column-end: span 3;
+  }
 }
