--- a/styles/style.css
+++ b/styles/style.css
@@ -92,6 +92,13 @@ input[type="search"] {
   font-weight: 700;
 }
 
+/* 공통 메인 콘텐츠 */
+.appMain {
+  display: grid;
+  gap: var(--spacing-base);
+  padding: var(--spacing-base) var(--spacing-lg);
+}
+
 /* 모바일 디바이스 (Mobile Device) */
 @media (min-width: 320px) and (max-width: 768px) {
   /* 모바일 헤더 */
@@ -184,6 +191,7 @@ input[type="search"] {
     backdrop-filter: blur(4px);
     padding: var(--spacing-lg);
     transform: translateX(-150%);
+    /* transition: all 600ms; */
   }
 
   .menu__item {
@@ -196,6 +204,17 @@ input[type="search"] {
 
   .menu.is--active .menu__list {
     transform: none;
+  }
+
+  /* 모바일 메인 콘텐츠 */
+  .appMain {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+  }
+
+  /* 모바일 새소식 */
+  .news {
+    grid-area: 1/1/2/3;
   }
 }
 
@@ -249,7 +268,6 @@ input[type="search"] {
     padding: var(--spacing-md) var(--spacing-lg);
     color: var(--white);
     font-size: 1.2rem;
-    font-weight: 700;
     text-shadow: 1px 1px 0 var(--black), -1px -1px 0 var(--black);
   }
 }
