--- a/styles/base.css
+++ b/styles/base.css
@@ -32,3 +32,24 @@ video {
   width: 100%;
   height: auto;
 }
+
+/* 반응형 Iframe */
+
+.iframeRatio-21-9 {
+  aspect-ratio: 21/9;
+}
+.iframeRatio-16-9 {
+  aspect-ratio: 16/9;
+}
+.iframeRatio-4-3 {
+  aspect-ratio: 4/3;
+}
+.iframeRatio-1-1 {
+  aspect-ratio: 1/1;
+}
+
+.iframeWrapper iframe {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
