--- a/styles/grid-layout.css
+++ b/styles/grid-layout.css
@@ -43,7 +43,7 @@ body {
   background: SandyBrown;
 }
 
-/* 공통 레이아웃 - 모바일&&데스크탑 */
+/* 공통 레이아웃 */
 .container {
   border: 5px solid black;
   margin: 50px;
@@ -55,31 +55,27 @@ body {
 .group1 {
   grid-area: box1;
 }
-
 .group2 {
   grid-area: box2;
 }
-
 .group3 {
   grid-area: box3;
 }
-
 .group4 {
   grid-area: box4;
 }
-
 .group5 {
   grid-area: box5;
 }
-
 
 /* 모바일 레이아웃 */
 @media (max-width: 768px) {
   .container {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: "box1 box2" 
-                         "box1 box3" 
-                         "box4 box5";
+    grid-template-areas:
+      "box1 box2"
+      "box1 box3"
+      "box4 box5";
   }
 }
 
@@ -87,8 +83,13 @@ body {
 @media (min-width: 769px) {
   .container {
     grid-template-columns: repeat(12, 1fr);
-    grid-template-areas: "box1 box1 box1 box1 box5 box5 box5 box5  box5 box4 box4 box4"
-                         "box1 box1 box1 box1 . box3 box3 box3 box3 box3 box3 box3"
-                         "box2 box2 box2 box2 box2 box2 box2 box2 box2 box2 box2 box2";
+    grid-template-areas:
+      "box2 box2 box2 box2 box2 box2 box2 box2 box2 box2 box2 box2"
+      "box1 box1 box1 box1 box5 box5 box5 box5 box5 box4 box4 box4"
+      "box1 box1 box1 box1 . box3 box3 box3 box3 box3 box3 box3";
+  }
+  .group1 {
+    position: relative;
+    left: -50px;
   }
 }
