--- a/styles/style.css
+++ b/styles/style.css
@@ -422,6 +422,54 @@ input[type="search"] {
   }
 }
 
+/* 태블릿 디바이스 (Tablet Device) */
+@media (min-width: 640px) and (max-width: 768px) {
+  /* 태블릿 메인 콘텐츠 */
+  .appMain {
+    grid-template-columns: repeat(2, 1fr);
+    gap: var(--spacing-xl);
+    /* grid-template-areas: 
+    "news news"
+    "board favorite"
+    "twitter book"; */
+  }
+
+  /* 태블릿 추천 서적 */
+  .book {
+    /* grid-row-start: 3;
+    grid-column-start: 2; */
+    grid-area: 3 / 2 / 4 / 3;
+  }
+
+  /* 태블릿 새소식 */
+  .news {
+    /* grid-row-start: 1;
+    grid-column: 1 / 3; */
+    grid-area: 1 / 1 / 2 / 3;
+  }
+
+  /* 태블릿 게시판 */
+  .board {
+    /* grid-row-start: 2;
+    grid-column-start: 1; */
+    grid-area: 2 / 1 / 3 / 2;
+  }
+
+  /* 태블릿 인기사이트 */
+  .favorite {
+    /* grid-row-start: 2;
+    grid-column-start: 2; */
+    grid-area: 2 / 2 / 3 / 3;
+  }
+
+  /* 태블릿 트위터 */
+  .twitter {
+    /* grid-row-start: 3;
+    grid-column-start: 1; */
+    grid-area: 3 / 1 / 4 / 2;
+  }
+}
+
 /* 데스크탑 디바이스 (Desktop Device) */
 @media (min-width: 769px) {
   /* 데스크탑 헤더 */
@@ -488,6 +536,7 @@ input[type="search"] {
       "book book book book . board board board board board board board";
   }
 }
+
 /* 고해상도 배경이미지 미디어쿼리 */
 @media (-webkit-min-device-pixel-ratio: 2),
   (min--moz-device-pixel-ratio: 2),
