--- a/styles/style.css
+++ b/styles/style.css
@@ -428,45 +428,10 @@ input[type="search"] {
   .appMain {
     grid-template-columns: repeat(2, 1fr);
     gap: var(--spacing-xl);
-    /* grid-template-areas: 
+    grid-template-areas: 
     "news news"
     "board favorite"
-    "twitter book"; */
-  }
-
-  /* 태블릿 추천 서적 */
-  .book {
-    /* grid-row-start: 3;
-    grid-column-start: 2; */
-    grid-area: 3 / 2 / 4 / 3;
-  }
-
-  /* 태블릿 새소식 */
-  .news {
-    /* grid-row-start: 1;
-    grid-column: 1 / 3; */
-    grid-area: 1 / 1 / 2 / 3;
-  }
-
-  /* 태블릿 게시판 */
-  .board {
-    /* grid-row-start: 2;
-    grid-column-start: 1; */
-    grid-area: 2 / 1 / 3 / 2;
-  }
-
-  /* 태블릿 인기사이트 */
-  .favorite {
-    /* grid-row-start: 2;
-    grid-column-start: 2; */
-    grid-area: 2 / 2 / 3 / 3;
-  }
-
-  /* 태블릿 트위터 */
-  .twitter {
-    /* grid-row-start: 3;
-    grid-column-start: 1; */
-    grid-area: 3 / 1 / 4 / 2;
+    "twitter book";
   }
 }
 
